kubernetes/apps/network/netbird/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird
spec:
  parentRefs:
    - { name: external, namespace: kube-system }
    - { name: internal, namespace: kube-system }
  hostnames: ["netbird.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs: [{ name: netbird-management, port: 80 }]
      matches: [{ path: { type: PathPrefix, value: /api } }]
    - backendRefs: [{ name: netbird-relay, port: 33080 }]
      matches: [{ path: { type: PathPrefix, value: /relay } }]
    - backendRefs: [{ name: netbird-dashboard, port: 80 }]
      matches: [{ path: { type: PathPrefix, value: / } }]
